# F.A.R.F.A.N-MECHANISTIC_POLICY_PIPELINE

./: .env.example  .gitignore  .importlinter  1_signal_ecosystem_anatomy.html  2_signal_core_mechanisms.html  3_signal_intelligence_pathology.html  4_signal_forensic_trace.html  5_signal_integration_blueprint.html  AGGREGATION_AUDIT_FINDINGS.md  AGGREGATION_DESIGN_RATIONALE.md  ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_COMPLIANCE_CERTIFICATE.txt  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_REFACTOR_RECOMMENDATION_ENGINE.md  ASSESSMENT_REAL_ISSUES.md  ATROZ_IMPLEMENTATION_GUIDE.md  AUDIT_DRY_RUN_REPORT.json  AUDIT_REPORT.md  AUDIT_SUMMARY.md  BUILD_HYGIENE.md  CALIBRATION_CANONICAL_COHERENCE_ANALYSIS.md  CALIBRATION_CONFIG_MIGRATION_SUMMARY.md  CANONICAL_INVENTORY_README.md  CANONICAL_PARAMETER_CATALOG_REPORT.md  CATALOG_REGISTRY_ALIGNMENT_POLICY.md  CERTIFICATION_REPORT.md  CHANGELOG.md  COMPREHENSIVE_ARCHITECTURE_MAP.md  CONFIGURATION_MANAGEMENT_IMPLEMENTATION.md  CONTRACT_ARCHITECTURE_REPORT.md  CONTRACT_CICD_CHECKLIST.md  CONTRACT_CICD_QUICKSTART.md  CONTRACT_CICD_SETUP.md  CONTRACT_ENVELOPE_INTEGRATION.md  CONTRACT_GOVERNANCE.md  CONTRACT_V2_QUICK_REFERENCE.md  DELETION_REPORT.json  DEPENDENCIES_QUICKSTART.md  DEVELOPER_QUICK_REFERENCE.md  (+134 more)
.github/: CICD_INTEGRATION.md  COMMANDS_REFERENCE.md
.matplotlib/: fontlist-v390.json
.mcp-debug-tools/: config.json
CANONIC_COMPENDIUM/: a_canonical_farfan_implementation.md
MIGRATION_ARTIFACTS_FAKE_TO_REAL/: 00_INVENTORY_INDEX.md  README.md
config/: INTRINSIC_CALIBRATION_DEPRECATED.md  INTRINSIC_CALIBRATION_README.md  advanced_executor_parameters.json  calibration_config.py  calibration_paths.json  canonic_inventory_methods_parametrized.json  canonical_method_catalogue_v2.json  choquet_weights.json  executor_config.json  executor_contract.schema.json  intrinsic_calibration.json  method_parameters.json  quality_thresholds.json  recommendation_rules_enhanced.json  unit_layer_config.json
contracts/: README.md  __init__.py  importlinter.ini  phase4_pattern_filtering_v2.0.md
data/: questionnaire_monolith.json  signature_audit_report.json  signature_diff_report.json
docs/: ADVANCED_MODULE_CONFIG_CALIBRATION_EXPLANATION.md  ADVANCED_MODULE_CONFIG_CALIBRATION_TRIAGE.md  ADVANCED_MODULE_CONFIG_LAYER_CALIBRATION_REPORT.md  CALIBRATION_CANONICAL_COHERENCE_ANALYSIS.md  CALIBRATION_COMPLETION_REPORT.md  CALIBRATION_INTEGRATION_STATUS.md  CALIBRATION_QUICK_START.md  CALIBRATION_SYSTEM_AUDIT.md  CALIBRATION_SYSTEM_PROGRESS_REPORT.md  CALIBRATION_TRANSPARENCY_REPORT.md  D1-Q1_human_answer_structure_design.md  FASE_5_1_HARDCODED_SCAN_REPORT.json  FASE_5_1_HARDCODED_SCAN_REPORT.md  FASE_5_2_MIGRATION_PLAN.md  METHOD_INJECTION_GUIDE.md  MODEL_POST_INIT_CALIBRATION_INTEGRATION.md  PARAMETERIZATION_STATUS_REPORT.md  PARAMETER_EXTRACTION.md  PHASE_0_1_CANONICAL_VERIFICATION.md  QUESTIONNAIRE_SIGNAL_IRRIGATION_DESIGN.md  QUICKSTART.md  QUICKSTART_RUN_ANALYSIS.md  REPOSITORY_STRUCTURE.md  SIGNAL_IRRIGATION_IMPLEMENTATION_EVIDENCE.md  SIGNAL_IRRIGATION_INNOVATION_AUDIT.md  SIGNAL_IRRIGATION_README.md  aggregation_phase_canonical.md  contract_generation_log.json  contract_generation_stats_batch1.json  contract_generation_stats_batch10.json  contract_generation_stats_batch11.json  contract_generation_stats_batch12.json  contract_generation_stats_batch13.json  contract_generation_stats_batch14.json  contract_generation_stats_batch15.json  contract_generation_stats_batch2.json  contract_generation_stats_batch3.json  contract_generation_stats_batch4.json  contract_generation_stats_batch5.json  contract_generation_stats_batch6.json  (+7 more)
examples/: micro_prompts_integration_demo.py  sota_pa_coverage_pipeline.py  use_canonical_catalog.py
metricas_y_seguimiento_canonico/: README.md  health.py
reports/: RUNTIME_ERROR_DISCOVERY_REPORT.md  TEST_HYGIENIST_FINAL_REPORT.md  parameterization_vectors.md  pytest_raw_output.txt  test_execution_output.txt  test_hygienist_report.json  test_hygienist_report.txt
scripts/: QUICK_REFERENCE.md  README.md  README_PRE_COMMIT.md  analyze_circular_imports.py  audit_catalog_registry_alignment.py  audit_circular_imports.py  audit_dependencies.py  audit_import_budget.py  audit_imports.py  audit_paths.py  audit_questionnaire_coverage.py  audit_signal_coverage.py  build_canonical_method_catalogue_v2.py  build_method_usage_intelligence.py  build_monolith.py  bundle_release_certificates.py  calibrate_all_30_executors.py  canonical_flux_analyzer.py  check_directive_compliance.py  comprehensive_pipeline_audit.py  config_hash_registry.json  create_deployment_zip.py  deep_clean_calibration_artifacts.py  equip_compat.py  equip_cpp_smoke.py  equip_native.py  equip_python.py  equip_signals.py  execute_deletion.py  fix_all_relative_imports.py  fix_farfan_imports.py  fix_imports.py  gen_cal_standalone.py  generate_300_specialized_contracts.py  generate_all_v3_contracts.py  generate_canonical_parameter_catalog.py  generate_d1q1_final.py  generate_graphs.py  generate_signal_graphs.py  import_all.py  (+62 more)
spc_ingestion/: Cargo.toml
spc_ingestion/src/: lib.rs
tests/: UPDATED_TESTS_MANIFEST.json  check_hardcoded.py  conftest.py  demonstrate_chunk_execution.py  final_system_verification.py  test_aggregation.py  test_aggregation_validation.py  test_aggregators_optional_monolith.py  test_api_server.py  test_arg_router.py  test_arg_router_expected_type_name.py  test_arg_router_extended.py  test_argrouter_optional_backends.py  test_async_timeout.py  test_base_executor_contract_guards.py  test_base_layer_weights_fix.py  test_batch_executor.py  test_boot_checks_runtime.py  test_boundaries.py  test_calibration_completeness.py  test_calibration_context.py  test_calibration_integration.py  test_calibration_stability.py  test_calibration_system.py  test_calibration_system_regression.py  test_catalogue_verification.py  test_chunk_execution.py  test_circuit_breaker_async.py  test_circuit_breaker_stress.py  test_class_registry_paths.py  test_concurrency.py  test_config_manager.py  test_contract_runtime.py  test_contract_snapshots.py  test_contracts.py  (+77 more)
(+1258 files in other folders)
