[package]
name = "spc_ingestion"
version = "0.1.0"
edition = "2021"

[lib]
name = "spc_ingestion"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# PDF processing
pdf-extract = "0.7"

# Arrow/Parquet
arrow = { version = "52.0", features = ["ipc", "json"] }
parquet = "52.0"

# Graph processing
petgraph = "0.6"

# Unicode handling
unicode-normalization = "0.1"
unicode-segmentation = "1.11"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
